# hedges

./: .gitignore  Makefile  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
hedges/: bc.py  fluxes.py  hyperbolic_solver_1d.py  main.ipynb  main.py  quadrature.py  rk.py  simulation.py  swe_1d.py
hedges/swe_1d/: pde.py  steady.py
